--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Cyberchad</h1>
-							<p>Untitled</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Write-ups</a></li>
 							</ul>
 						</div>
 					</section>
@@ -49,7 +48,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Academy</h2>
-									<p>Academy Write-up</p>
+									<p>Untitiled</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -57,11 +56,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/time.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Untitled</h2>
-									<p>Untitled</p>
+									<p>Untitiled</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -69,11 +68,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/doctor.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Untitled</h2>
-									<p>Untitled</p>
+									<p>Untitiled</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -85,8 +84,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Untitled</p>
+							<h2>Tools</h2>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -95,28 +93,28 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Toolkit</h3>
+									<h3>Untitiled</h3>
 									<a href="https://github.com/cyb3rchad/toolkit.git">Toolkit Repoistory</a>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Untitled</p>
+									<h3>Untitiled</h3>
+									<p>Untitiled</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Untitled</p>
+									<h3>Untitiled</h3>
+									<p>Untitiled</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Untitled</p>
+									<h3>Untitiled</h3>
+									<p>Untitiled</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Untitled</p>
+									<h3>Untitiled</h3>
+									<p>Untitiled</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -129,7 +127,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Untitled</p>
+							<p>Untitiled</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -155,21 +153,21 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
+											<h3>Untitiled</h3>
 											<span>n/a<br />
 											n/a<br />
 											n/a</span>
 										</li>
 										<li>
-											<h3>Email</h3>
+											<h3>Untitiled</h3>
 											<a href="#">cyberchad@outlook.com</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
+											<h3>Untitiled</h3>
 											<span>n/a</span>
 										</li>
 										<li>
-											<h3>Social</h3>
+											<h3>Untitiled</h3>
 											<ul class="icons">
 												<li><a href="https://twitter.com/Cyberchad2" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
