Added test html files

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Academy</h2>
-									<p>Untitiled</p>
+									<p>Hack the box write-up</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="academy.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -59,10 +59,10 @@
 							<a href="#" class="image"><img src="images/time.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Untitled</h2>
-									<p>Untitiled</p>
+									<h2>Time</h2>
+									<p>Hack the box write-up</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="time.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -71,10 +71,10 @@
 							<a href="#" class="image"><img src="images/doctor.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Untitled</h2>
-									<p>Untitiled</p>
+									<h2>Doctor</h2>
+									<p>Hack the box write-up</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="doctor.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -159,7 +159,7 @@
 											n/a</span>
 										</li>
 										<li>
-											<h3>Untitiled</h3>
+											<h3>Email</h3>
 											<a href="#">cyberchad@outlook.com</a>
 										</li>
 										<li>
