--- a/time.html
+++ b/time.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="time.html" class="active">Academy</a></li>
+						<li><a href="time.html" class="active">Time</a></li>
 						<li><a href="tools.html">Tools</a></li>
 					</ul>
 				</nav>
@@ -32,7 +32,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Hack the box Academy</h1>
+							<h1 class="major">Hack the box Time</h1>
 							<span class="image"><img src="images/timelogo.png" alt="" /></span>
 							<h2>Testing code format</h2>
 							<code>print("Hello, World!")</code>
