--- a/htbtemplate.html
+++ b/htbtemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Hack the box Academy</title>
+		<title>Hack the box #</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="academy.html" class="active">Academy</a></li>
+						<li><a href="#" class="active">#</a></li>
 						<li><a href="tools.html">Tools</a></li>
 					</ul>
 				</nav>
@@ -27,8 +27,8 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Hack the box Academy</h1>
-							<span class="image"><img src="images/academylogo.png" alt="" /></span>
+							<h1 class="major">Hack the box #</h1>
+							<span class="image"><img src="images/#" alt="" /></span>
 							<h2>Testing code format</h2>
 							<code>print("Hello, World!")</code>
 					</section>
@@ -45,7 +45,7 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+	 		<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
