--- a/academy.html
+++ b/academy.html
@@ -29,8 +29,21 @@
 						<div class="inner">
 							<h1 class="major">Hack the box Academy</h1>
 							<span class="image"><img src="images/academylogo.png" alt="" /></span>
-							<h2>Testing code format</h2>
-							<code>print("Hello, World!")</code>
+							<h2>Starting with nmap scan</h2>
+							<h3><code>$nmap -sCV -Pn 10.10.10.215</code></h3><br>
+							<pre><code>Starting Nmap 7.80 ( https://nmap.org ) at 2021-02-25 21:14 GMT
+Nmap scan report for 10.10.10.215
+Host is up (0.016s latency).
+Not shown: 998 closed ports
+PORT   STATE SERVICE VERSION
+22/tcp open  ssh     OpenSSH 8.2p1 Ubuntu 4ubuntu0.1 (Ubuntu Linux; protocol 2.0)
+80/tcp open  http    Apache httpd 2.4.41 ((Ubuntu))
+|_http-server-header: Apache/2.4.41 (Ubuntu)
+|_http-title: Did not follow redirect to http://academy.htb/
+Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel
+
+Service detection performed. Please report any incorrect results at https://nmap.org/submit/ .
+Nmap done: 1 IP address (1 host up) scanned in 8.77 seconds</code></pre><br>
 					</section>
 
 			</div>
